# mediasoup-utility-client

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  build.rs  build.sh
common/: CMakeLists.txt
common/include/common/: crc32.hpp  executor.hpp  http_client.hpp  logger.hpp  protoo.hpp
common/src/: http_client.cpp  logger.cpp  protoo.cpp
examples/: consume.rs
load-test-bot/: CMakeLists.txt
load-test-bot/src/: conference.cpp  conference.hpp  conference_manager.cpp  conference_manager.hpp  consumer.hpp  main.cpp  timer_event_loop.cpp  timer_event_loop.hpp  ui.cpp  ui.hpp  viewer.cpp  viewer.hpp  viewer_manager.cpp  viewer_manager.hpp
msc/: CMakeLists.txt  channel.hpp  common.hpp  device.cpp  device.hpp  executor.hpp  lib.cpp  lib.h  media_sink.cpp  media_sink.hpp  video_writer.hpp
msc/include/msc/: executor.hpp  msc.hpp
msc/src/: assert.hpp  media_sender.hpp  media_sink.cpp  media_sink.hpp  msc.cpp  peer_connection_factory.cpp  video_writer.cpp
src/: error.rs  ffi.rs  lib.cpp  lib.h  lib.rs  main.cpp  peer_connection_factory.cpp  types.rs
stream-writer/: CMakeLists.txt
stream-writer/src/: main.cpp  video-writer.cpp  video-writer.hpp
