[package]
name = "rusty_msc"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.18.0"
thiserror = "1.0"

serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"

[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
    "blocking",
] }

[features]
default = []
